--- a/cowork_project_management_flow/views/cowork_project_apply.xml
+++ b/cowork_project_management_flow/views/cowork_project_apply.xml
@@ -16,24 +16,41 @@
                         <button type="object" class="oe_stat_button" icon="fa-bookmark-o" string="项目评估" name="action_to_estimate" attrs="{'invisible':[('estimate_id','=',False)]}"/>
                         <button type="object" class="oe_stat_button" icon="fa-cart-plus" string="询价单" name="action_to_purchase" attrs="{'invisible':[('state','=','business')]}"/>
                     </div>
-                    <group string="申请信息">
+                    <h1>
                         <field name="name" readonly="1"/>
-                        <field name="date_apply" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="user_id" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="location_apply" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="title" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="estimate_id" attrs="{'invisible':[('estimate_id','=',False)],'readonly': [('state', '=', 'project')]}"/>
+                    </h1>
+                    <group string="申请信息">
+                        <group>
+                            <label for="rule_id" string="编号类型"/>
+                            <div class="o_row">
+                                <field name="rule_id"/>
+                                <button  name="button_mark_done"  string="生成" type="object" class="oe_highlight" />
+                            </div>
+                            <field name="title" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="estimate_id" attrs="{'invisible':[('estimate_id','=',False)],'readonly': [('state', '=', 'project')]}"/>
+                        </group>
+                        <group>
+                            <field name="date_apply" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="user_id" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="location_apply" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                        </group>
                     </group>
                     <group string="商务信息">
-                        <field name="partner_id" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="partner_type" widget="radio" options="{'horizontal': true}" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="partner_address" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="budget" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="count" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="date_deliver" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="customer_comment" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="customer_requirement" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                        <field name="currency_id" invisible="1"/>
+                        <group>
+                            <field name="partner_id" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="partner_type" widget="radio" options="{'horizontal': true}" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="partner_address" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                        </group>
+                        <group>
+                            <field name="budget" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="count" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="date_deliver" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="customer_comment" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="currency_id" invisible="1"/>
+                        </group>
+                    </group>
+                    <group string="客户需求">
+                        <field name="customer_requirement" attrs="{'readonly': [('state', '=', 'project')]}" nolabel="1"/>
                     </group>
                     <group string="项目负责人">
                         <field name="charger_lines" nolabel="1">
