--- a/cowork_project_management_flow/views/cowork_quote_order.xml
+++ b/cowork_project_management_flow/views/cowork_quote_order.xml
@@ -30,12 +30,18 @@
                     <h1>
                         <field name="name" readonly="1"/>
                     </h1>
-                    <group>
-                        <field name="project_id" attrs="{'readonly': [('state', '!=', 'business')]}"/>
-                        <field name="date_deliver"/>
+                    <h2>
                         <field name="title" attrs="{'readonly': [('state', '!=', 'business')]}"/>
-                        <field name="partner_id" attrs="{'readonly': [('state', '!=', 'business')]}"/>
-                        <field name="contact_id" attrs="{'readonly': [('state', '!=', 'business')]}" domain="[('parent_id','=',partner_id)]" options="{'no_create_edit':1}"/>
+                    </h2>
+                    <group>
+                        <group>
+                            <field name="project_id" attrs="{'readonly': [('state', '!=', 'business')]}"/>
+                            <field name="date_deliver"/>
+                        </group>
+                        <group>
+                            <field name="partner_id" attrs="{'readonly': [('state', '!=', 'business')]}"/>
+                            <field name="contact_id" attrs="{'readonly': [('state', '!=', 'business')]}" domain="[('parent_id','=',partner_id)]" options="{'no_create_edit':1}"/>
+                        </group>
                     </group>
                     <group string="物料成本">
                         <field name="material_cost_details_lines" nolabel="1" attrs="{'readonly': [('state', '=', 'general')]}" options="{'no_create_edit':1}">
@@ -43,9 +49,9 @@
                                 <field name="name" readonly="1"/>
                                 <field name="count" readonly="1"/>
                                 <field name="class_id" readonly="1"/>
-                                <field name="total_cost" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1"/>
+                                <field name="total_cost" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1" sum="Total"/>
                                 <field name="currency_id" invisible="1"/>
-                                <field name="sale_cost" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                                <field name="sale_cost" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
                                 <field name="state" invisible="1"/>
                                 <button type="object" class="oe_highlight" name="edit_spare_parts" string="编辑组件" attrs="{'invisible': [('state', '=', 'general')]}"/>
                             </tree>
@@ -59,8 +65,8 @@
                                 <field name="hours_per_day" readonly="1"/>
                                 <field name="total_hours" readonly="1"/>
                                 <field name="unit_price" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1"/>
-                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1"/>
-                                <field name="total_quote" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                                <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" readonly="1" sum="Total"/>
+                                <field name="total_quote" widget="monetary" options="{'currency_field': 'currency_id'}" sum="Total"/>
                                 <field name="currency_id" invisible="1"/>
                                 <field name="state" invisible="1"/>
                                 <button type="object" class="oe_highlight" name="edit_spare_parts" string="编辑人力信息" attrs="{'invisible': [('state', '=', 'general')]}"/>
@@ -78,10 +84,10 @@
                     <notebook>
                         <page string="设备合同">
                             <header>
-                                <button name="contract_state_to_approving" string="提交" type="object" class="oe_highlight" states='draft'/>
-                                <button name="contract_state_to_draft" string="驳回" type="object" class="oe_highlight" states='approving'/>
-                                <button name="contract_state_to_done" string="审核通过" type="object" class="oe_highlight" states='approving'/>
-                                <button name="contract_state_to_cancel" string="无效" type="object" class="oe_highlight" states='approving'/>
+                                <button name="contract_state_to_approving" string="提交" type="object" class="oe_highlight" attrs="{'invisible': [('contract_state', '!=', 'draft')]}"/>
+                                <button name="contract_state_to_draft" string="驳回" type="object" class="oe_highlight" attrs="{'invisible': [('contract_state', '!=', 'approving')]}"/>
+                                <button name="contract_state_to_done" string="审核通过" type="object" class="oe_highlight" attrs="{'invisible': [('contract_state', '!=', 'approving')]}"/>
+                                <button name="contract_state_to_cancel" string="无效" type="object" class="oe_highlight" attrs="{'invisible': [('contract_state', '!=', 'approving')]}"/>
                                 <field name="contract_state" widget="statusbar" readonly="1"/>
                             </header>
                             <group>
@@ -90,10 +96,10 @@
                         </page>
                         <page string="技术协议">
                             <header>
-                                <button name="agreement_state_to_approving" string="提交" type="object" class="oe_highlight" states='draft'/>
-                                <button name="agreement_state_to_draft" string="驳回" type="object" class="oe_highlight" states='approving'/>
-                                <button name="agreement_state_to_done" string="审核通过" type="object" class="oe_highlight" states='approving'/>
-                                <button name="agreement_state_to_cancel" string="无效" type="object" class="oe_highlight" states='approving'/>
+                                <button name="agreement_state_to_approving" string="提交" type="object" class="oe_highlight" attrs="{'invisible': [('agreement_state', '!=', 'draft')]}"/>
+                                <button name="agreement_state_to_draft" string="驳回" type="object" class="oe_highlight" attrs="{'invisible': [('agreement_state', '!=', 'approving')]}"/>
+                                <button name="agreement_state_to_done" string="审核通过" type="object" class="oe_highlight" attrs="{'invisible': [('agreement_state', '!=', 'approving')]}"/>
+                                <button name="agreement_state_to_cancel" string="无效" type="object" class="oe_highlight" attrs="{'invisible': [('agreement_state', '!=', 'approving')]}"/>
                                 <field name="agreement_state" widget="statusbar" readonly="1"/>
                             </header>
                             <group>
